@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{588, 72}, {1011, 1097}}</string>
+	<string>{{641, 70}, {1027, 1104}}</string>
 </dict>
 </plist>
