@@ -13,9 +13,9 @@ def rb_main_init
   end
 end
 
-if $0 == __FILE__ then
-  rb_main_init
-  OSX.NSApplicationMain(0, nil)
-end
+#if $0 == __FILE__ then
+#  rb_main_init
+#  OSX.NSApplicationMain(0, nil)
+#end
 
-#SACrashReporter.run_app
+SACrashReporter.run_app
