@@ -1,3 +1,8 @@
+2007-11-04  Satoshi Nakagawa <artension@gmail.com>
+
+	Updated and enabled SACrashReporter.
+	Thanks to Eloy Duran.
+
 2007-11-01  Satoshi Nakagawa <artension@gmail.com>
 
 	Trying to integrate SACrashReporter.
